@startuml

skinparam linetype ortho
skinparam packageStyle rectangle

package "PhotographyNET" {
  package "Infrastructure" {
    package "database" {
      package "repositories" {
        
        class ProjectRepository {
          - _db : RepositoryHelper
          + GetById(id : int) : Project?
          + GetAll() : List<Project>
          + Insert(project : Project) : Project
          + Update(project : Project) : void
          + DeleteById(id : int) : void
          + SearchProjects(settings : ProjectSearchSettings) : List<Project>
        }

        class ImageRepository {
          - _db : RepositoryHelper
          + GetAll() : List<Image>
          + GetAllByProjectId(projectId : int) : List<Image>
          + Insert(image : Image) : Image
          + Update(image : Image) : void
          + DeleteById(id : int) : void
        }

        class RepositoryHelper {
          - _dataSource
          - _logger
          + QueryMultiple<T>(sql : string, resultConverter, parameterValues : object[]) : List<T>
          + Query<TResult>(sql : string, resultConverter, parameterValues : object?[]) : TResult
          + Execute(sql : string, parameterValues : object[]) : void
          - SetParameters<TResult>(parameterValues : object?[], command) : void
          + MapToInt(reader) : int
          + MapToBool(reader) : bool
        }
      }
    }
  }

  package "Domain" {
    class Project
    class Image
    class ProjectSearchSettings
  }
}

ProjectRepository --> RepositoryHelper : uses
ImageRepository --> RepositoryHelper : uses

ProjectRepository --> Project : maps
ImageRepository --> Image : maps
ProjectRepository --> ProjectSearchSettings : uses
@enduml